Update all dependencies and use jdk 17